Bug 20604 - treelang does not get passed -fPIC by default on *-darwin
Summary: treelang does not get passed -fPIC by default on *-darwin
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: treelang (show other bugs)
Version: 4.1.0
: P2 normal
Target Milestone: 4.1.0
Assignee: Andrew Pinski
URL:
Keywords: patch
: 23061 (view as bug list)
Depends on:
Blocks:
 
Reported: 2005-03-23 15:03 UTC by Andrew Pinski
Modified: 2005-08-11 04:49 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2005-03-25 21:33:57


Attachments
Translation of pinskia's lang-specs.h patch for mainline to the 4.0 branch... (402 bytes, patch)
2005-08-10 11:47 UTC, Christian Joensson
Details | Diff
Translation of pinskia's lang-specs.h patch for mainline to the 3.4 branch... (392 bytes, patch)
2005-08-11 04:49 UTC, Christian Joensson
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Pinski 2005-03-23 15:03:15 UTC
You can tell that it does not get passed -fPIC by the following failure in the testsuite:
Executing on host: /Users/pinskia/src/new-fold/gcc/objdir/gcc/xgcc -B/Users/pinskia/src/new-fold/
gcc/objdir/gcc/ /Users/pinskia/src/new-fold/gcc/gcc/testsuite/treelang/execute/funccall.tree     -lm   
-o ./funccall.exe    (timeout = 300)
/usr/bin/ld: /var/tmp//ccbSoNBy.o has external relocation entries in non-writable section 
(__TEXT,__text) for symbols:^M
_abort^M
_exit^M
collect2: ld returned 1 exit status^M
compiler exited with status 1 
output is:
/usr/bin/ld: /var/tmp//ccbSoNBy.o has external relocation entries in non-writable section 
(__TEXT,__text) for symbols:^M_abort^M
_exit^M
collect2: ld returned 1 exit status^M

FAIL: treelang/execute/funccall.tree (test for excess errors)
Excess errors:
/usr/bin/ld: /var/tmp//ccbSoNBy.o has external relocation entries in non-writable section 
(__TEXT,__text) for symbols:
_abort
_exit

With -v I get:
 /Users/pinskia/src/new-fold/gcc/objdir/gcc/tree1 -quiet -dumpbase funccall.tree -v -o /var/tmp//
ccLOPtCF.s /Users/pinskia/src/new-fold/gcc/gcc/testsuite/treelang/execute/funccall.tree
Comment 1 Andrew Pinski 2005-03-25 21:33:57 UTC
I am about to post a patch for this one.
Comment 2 Andrew Pinski 2005-03-25 21:39:24 UTC
Patch here: <http://gcc.gnu.org/ml/gcc-patches/2005-03/msg02391.html>.
Comment 3 GCC Commits 2005-04-01 15:01:41 UTC
Subject: Bug 20604

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	pinskia@gcc.gnu.org	2005-04-01 15:01:31

Modified files:
	gcc/treelang   : ChangeLog lang-specs.h 

Log message:
	2005-04-01  Andrew Pinski  <pinskia@physics.uc.edu>
	
	PR treelang/20604
	* lang-spec.c: Simplify @treelang to what the other
	languages do.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/treelang/ChangeLog.diff?cvsroot=gcc&r1=1.120&r2=1.121
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/treelang/lang-specs.h.diff?cvsroot=gcc&r1=1.3&r2=1.4

Comment 4 Andrew Pinski 2005-04-01 15:01:43 UTC
Fixed.
Comment 5 Andrew Pinski 2005-08-08 17:28:09 UTC
*** Bug 23061 has been marked as a duplicate of this bug. ***
Comment 6 Christian Joensson 2005-08-08 17:53:10 UTC
well... the patch applies cleanly still on the 4.0 branch... I sure would love
to see this applied there also...

unfortunately, I see it does not apply to the 3.4 branch...
Comment 7 Mark Mitchell 2005-08-09 15:31:49 UTC
This patch is OK for the 4.0 branch, if someone wants to go ahead and apply it
there.  It's not a major priority, since treelang is not one of the primary
languages, but it's OK to apply it.
Comment 8 Christian Joensson 2005-08-09 19:03:16 UTC
well, applied to 4.0, works fine, one FAIL in -m64:

		=== treelang tests ===


Running target unix/-m64
FAIL: gcc 01 01 rc!=0

		=== treelang Summary for unix/-m64 ===

# of expected passes		46
# of unexpected failures	1

Running target unix

		=== treelang Summary for unix ===


		=== treelang Summary ===

# of expected passes		46
# of unexpected failures	1

Compiler version: 4.0.2 20050809 (prerelease) 
Platform: sparc64-unknown-linux-gnu
configure flags: --enable-__cxa_atexit --enable-shared --with-cpu=v7
--enable-languages=c,ada,c++,f95,java,objc,treelang

Now, could we also have the patch from
http://gcc.gnu.org/bugzilla/show_bug.cgi?id=23072 I'd be even more pleased :)
Comment 9 Christian Joensson 2005-08-10 11:47:18 UTC
Created attachment 9461 [details]
Translation of pinskia's lang-specs.h patch for mainline to the 4.0  branch...
Comment 10 Christian Joensson 2005-08-11 04:49:17 UTC
Created attachment 9467 [details]
Translation of pinskia's lang-specs.h patch for mainline to the 3.4  branch...