2005-04-01  Andrew Pinski  <pinskia@physics.uc.edu>

PR treelang/20604
        * lang-spec.c: Simplify @treelang to what the other
        languages do.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@97396 138bc75d-0d04-0410-961f-82ee72b054a4